@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940716
+MANIFEST for ded, version t19940717
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
